[gd_scene load_steps=3 format=3 uid="uid://c2tgmbnlyaied"]

[ext_resource type="PackedScene" uid="uid://digraf1a1dts0" path="res://Scences/LeaderboardEntry.tscn" id="1_hux3h"]
[ext_resource type="Script" path="res://Scripts/leaderboard.gd" id="1_nxhs3"]

[node name="Leaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nxhs3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -48.0
offset_right = 217.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "     Leaderboard     "
horizontal_alignment = 1

[node name="Entries" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Title Contatiner" type="MarginContainer" parent="PanelContainer/VBoxContainer/Entries"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="LeaderboardTitles" parent="PanelContainer/VBoxContainer/Entries/Title Contatiner" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExamople" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExample1" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExamople2" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExample2" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExamople3" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExample3" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExamople4" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExample4" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExamople5" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="LeaderboardEntryExample5" parent="PanelContainer/VBoxContainer/Entries" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="PlayerEntryContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/Entries"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="PlayerEntry" parent="PanelContainer/VBoxContainer/Entries/PlayerEntryContainer" instance=ExtResource("1_hux3h")]
layout_mode = 2

[node name="Modes" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50
